--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,17 @@
-web:
-  build: .
-
-  ports:
-   - "8080:8080"
-
-
-
-
+version: 2.1
+orbs:
+  node: circleci/node@1.1.6
+jobs:
+  build-and-test:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm install
+            - run: npm test
+workflows:
+    build-and-test:
+      jobs:
+        - build-and-test
